--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -3,7 +3,7 @@
         <div class="header__row">
             <div class="header__logo">
                 <a class="header__logo-link logo" href="">
-                    <svg class="icon icon--logo-header">
+                    <svg class="icon icon--logo icon--logo-header">
                         <use href="./images/svgsprite/sprite.symbol.svg#logo"></use>
                     </svg>
                 </a>
