--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -1,5 +1,5 @@
 <section class="section-projects">
-  <div class="container">
+  <div class="container container--hero">
     <div class="section-projects__inner">
       <h3 class="section-projects__title title-h3">Our Projects</h3>
       <div class="section-projects__slider swiper">
@@ -99,28 +99,19 @@
             </h2>
             <div class="section-projects__slide-inner">
               <div class="section-projects__slide-content">
-                <div class="content">
-                  <p class="section-projects__slide-subtitle">
-                    3Two-bedroom apartment
-                  </p>
-                  <p class="section-projects__slide-text">
-                    Our latest project showcases a cozy two-bedroom apartment where modern style meets functionality.
-                    We've crafted a space
-                    that reflects the client's individuality, incorporating contemporary design trends. The combination
-                    of
-                    stylish
-                    furniture, warm tones, and intelligent solutions makes this apartment comfortable and inspiring. The
-                    project embodies
-                    our design principles: attention to detail, functionality, and aesthetics. The result is a perfect
-                    living space that
-                    expresses the client's personal style.
-                  </p>
-                  <ul class="section-projects__slide-info">
-                    <li class="section-projects__slide-item">120 m<sup>2</sup></li>
-                    <li class="section-projects__slide-item">4 weeks</li>
-                    <li class="section-projects__slide-item"><span>young family</span> </li>
-                  </ul>
-                </div>
+                <p class="section-projects__slide-subtitle">
+                  3Two-bedroom apartment
+                </p>
+                <p class="section-projects__slide-text">
+                  Our latest project showcases a cozy two-bedroom apartment where modern style meets functionality.
+                  We've crafted a space
+                  that reflects the client's individuality.
+                </p>
+                <ul class="section-projects__slide-info">
+                  <li class="section-projects__slide-item">120 m<sup>2</sup></li>
+                  <li class="section-projects__slide-item">4 weeks</li>
+                  <li class="section-projects__slide-item"><span>young family</span> </li>
+                </ul>
               </div>
               <img class="section-projects__slide-img" src="image/webp" srcset="./images/slider/image1@1x.webp 1x,
                 ./images/slider/image1@2x.webp 2x,
@@ -192,7 +183,6 @@
                 ./images/slider/image1@4x.webp 4x" alt="photo1">
             </div>
           </li>
-
         </ul>
 
         <div class="projects__slider-btn swiper-button-prev">
@@ -203,7 +193,6 @@
         </div>
 
       </div>
-      Content
     </div>
   </div>
 </section>
