--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -16,7 +16,7 @@
       <div class="footer__bottom">
         <div class="footer__logo">
           <a class="footer__logo-link logo" href="">
-            <svg class="icon icon--logo-footer">
+            <svg class="icon icon--logo icon--logo-footer">
               <use href="./images/svgsprite/sprite.symbol.svg#logo"></use>
             </svg>
           </a>
