--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,5 +1,5 @@
 <section class="about">
-  <div class="container container--hero">
+  <div class="container">
     <div class="about__wrapper">
       <div class="about__box">
         <h3 class="about__subtitle title-h3">About US</h3>
