--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-  <div class="container container--hero">
+  <div class="container">
 
     <div class="hero__grid">
       <div class="hero__about">
