--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
     @include('html/about.html', {})
     @include('html/projects.html', {})
     @include('html/tariffs.html', {})
-    <!-- @include('html/section-testimonials.html', {}) -->
-    <!-- @include('html/subscription.html', {}) -->
+    @include('html/gallery.html', {})
   </main>
   @include('html/blocks/footer.html', {})
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
