--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -1,5 +1,5 @@
 <section class="section-projects">
-  <div class="container container--hero">
+  <div class="container">
     <div class="section-projects__inner">
       <h3 class="section-projects__title title-h3">Our Projects</h3>
       <div class="section-projects__slider swiper">
